part1/log output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: strgenerator-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: strgenerator
  template:
    metadata:
      labels:
        app: strgenerator
    spec:
      volumes:
        - name: shared-file
          persistentVolumeClaim:
            claimName: file-claim
      containers:
        - name: strgenerator
          image: younes0204/random_string_generator
          volumeMounts:
            - name: shared-file
              mountPath: /usr/share
