part1/log output/manifests/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: strgenerator-svc
spec:
  type: ClusterIP
  selector:
    app:  strgenerator
  ports:
    - name: strgeneratorapp
      protocol: TCP
      port: 4444
      targetPort: 3000
