part1/log output/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: strgenerator-ing
spec:
  rules:
    - http:
        paths:
          - path: /log
            pathType: Prefix
            backend:
              service:
                name: strgenerator-svc
                port:
                  number: 4444 
          
          - path: /count
            pathType: Prefix
            backend:
              service:
                name: pingpong-svc
                port:
                  number: 4445
